@@ -1,4 +1,0 @@
-aclocal
-autoheader
-automake -a -c
-autoconf
