@@ -1,9 +1,10 @@
-.TH SSHPASS 1 "February 27, 2006" "Lingnu Open Source Consulting" "Sshpass User Manual"
+.TH SSHPASS 1 "October 17, 2008" "Lingnu Open Source Consulting" "Sshpass User Manual"
 .\" Please adjust this date whenever revising the manpage.
 .SH NAME
 sshpass \- noninteractive ssh password provider
 .SH SYNOPSIS
 .B sshpass
+.RB [ -f\fIfilename | -d\fInum | -p\fIpassword | -e ]
 .RI [ options ] " command arguments"
 .br
 .SH DESCRIPTION
@@ -54,12 +55,43 @@ more secure.
 In particular, people writing programs that are meant to communicate the password
 programatically are encouraged to use an anonymous pipe and pass the pipe's reading
 end to sshpass using the \-d option.
+.SH RETURN VALUES
+As with any other program, sshpass returns 0 on success. In case of failure, the following
+return codes are used:
+.TP
+1
+Invalid command line argument
+.TP
+2
+Conflicting arguments given
+.TP
+3
+General runtime error
+.TP
+4
+Unrecognized response from ssh (parse error)
+.TP
+5
+Invalid/incorrect password
+.TP
+6
+Host public key is unknown. sshpass exits without confirming the new key.
+.P
+In addition, ssh might be complaining about a man in the middle attack. This
+complaint does not go to the tty. In other words, even with sshpass, the error
+message from ssh is printed to standard error. In such a case ssh's return code
+is reported back. This is typically an unimaginative (and non-informative) "255"
+for all error cases.
 .SH EXAMPLES
 .P
 Run rsync over SSH using password authentication, passing the password on the
 command line:
 .PP
 rsync \-\-rsh='sshpass \-p 12345 ssh \-l test' host.example.com:path .
+.P
+To do the same from a bourne shell script in a marginally less exposed way:
+.PP
+SSHPASS=12345 rsync \-\-rsh='sshpass \-e ssh \-l test' host.example.com:path .
 .SH BUGS
 .P
 Sshpass is in its infancy at the moment. As such, bugs are highly possible. In
